--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
         uses: actions/setup-node@v1.4.2
       - name: Composer install
         uses: MilesChou/composer-action@master
-        with:
-          args: install
-      - name: Install Dependencies
+      - name: Install NPM dependencies
         run: npm install
+      - name: Install Comoser dependencies
+        run: composer install
       - name: Create Zip
         run: npm install
