--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,7 +4,6 @@ parameters:
     level: max
     inferPrivatePropertyTypeFromConstructor: true
     paths:
-        - includes/
-    ignoreErrors:
-        # Uses func_get_args()
-        - '#^Function apply_filters(_ref_array)? invoked with [34567] parameters, 2 required\.$#'
+        - includes
+    autoload_files:
+        - /zionbuilder.php
