--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -7,3 +7,6 @@ parameters:
         - includes/
     autoload_files:
         - zionbuilder.php
+    ignoreErrors:
+        # Uses func_get_args()
+        - '#^Function apply_filters(_ref_array)? invoked with [34567] parameters, 2 required\.$#'
