--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,12 @@ jobs:
           php-version: '7.4'
       - name: Install NPM dependencies
         run: npm install
+      - name: Check Composer configuration
+        run: composer validate --strict
       - name: Install Composer dependencies
         run: composer install
+      - name: Check PHP syntax
+        run: find zionbuilder.php includes/ -type f -name '*.php' -print0|xargs -0 -L1 -P4 -- php -l
       - name: PHPCS check
         uses: chekalsky/phpcs-action@v1
         with:
