Added cross frame message as soon as the preview data is available

--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"appName":"zionbuilder","outputDir":"dist","debug":true,"mode":"development","devServer":"http://localhost:8080/"}
+{"appName":"zionbuilder","outputDir":"dist"}
