--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,3 +44,5 @@ jobs:
           phpcs_bin_path: './vendor/bin/phpcs'
       - name: PHPStan check
         run: vendor/bin/phpstan analyze --level=5
+      - name: Lint Vue templates
+        run: npm run-script lint
