--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,18 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
+      - name: Install WP-CLI
+        run: |
+             mkdir -p ~/bin
+             wget -O ~/bin/wp "https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar" \
+               && chmod a+x ~/bin/wp
+      - name: i18n check
+        run: |
+             ~/bin/wp i18n make-pot includes/ languages/zionbuilder.pot --skip-js \
+               --slug="zionbuilder" \
+               --package-name="Zionbuilder" \
+               --headers='{"Report-Msgid-Bugs-To": "https://wordpress.org/plugins/search/zionbuilder/", "Language-Team": "Hogash <hello@hogash.com>", "POT-Creation-Date": "1970-01-01 00:00+0000"}' \
+               && git diff --exit-code
       - name: Set Composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-dir)"
