--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,10 @@ jobs:
                && chmod -v a+x ~/bin/wp
       - name: i18n check
         run: |
-             ~/bin/wp i18n make-pot includes/ languages/zionbuilder.pot --skip-js \
+             ~/bin/wp i18n make-pot . languages/zionbuilder.pot --include=zionbuilder.php,includes/ --skip-js \
                --slug="zionbuilder" \
                --package-name="Zionbuilder" \
-               --headers='{"Report-Msgid-Bugs-To": "https://github.com/zionbuilder/zionbuilder/issues/new/choose", "Language-Team": "Hogash <hello@hogash.com>", "POT-Creation-Date": "1970-01-01 00:00+0000"}' \
+               --headers='{"Report-Msgid-Bugs-To": "https://github.com/zionbuilder/zionbuilder/issues/new/choose", "Language-Team": "ZionBuilder <hello@zionbuilder.io>", "POT-Creation-Date": "1970-01-01 00:00+0000"}' \
                && git diff --exit-code
       - name: Set Composer cache directory
         id: composer-cache
