--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "typescript": "~3.5.3"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged && translate"
+    "pre-commit": "lint-staged && npm run translate && git add ."
   },
   "lint-staged": {
     "*.php": [
