--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
         run: composer install
       - name: i18n check
         run: |
-             npm run translate && I18N_DIFF="$(git diff -U0|grep '^[+-]\(msgid\|msgstr\) ')" && test -z "$I18N_DIFF"
+             npm run translate && ! git diff -U0 | grep '^[+-]\(msgid\|msgstr\) '
       - name: Check PHP syntax
         run: find zionbuilder.php includes/ -type f -name '*.php' -print0|xargs -0 -L1 -P4 -- php -l
       - name: PHPCS check
