--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.2",
     "fitvids": "^2.0.0",
-    "jszip": "^3.4.0",
-    "lg-video": "^1.3.0",
-    "lightgallery": "^1.7.0",
     "localstorage-ttl": "^1.0.2",
     "lodash-es": "^4.17.15",
     "memoize-one": "^5.1.1",
@@ -54,7 +51,7 @@
     "typescript": "~3.5.3"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged && npm run translate && git add languages/zionbuilder.pot"
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.php": [
