--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Node.js environment
         uses: actions/setup-node@v1.4.2
+        with:
+            node-version: '12'
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
