--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,16 +19,34 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Node.js environment
         uses: actions/setup-node@v1.4.2
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
-      - name: Install NPM dependencies
-        run: npm install
-      - name: Install Comoser dependencies
+            node-version: '12'
+      - name: Set Composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-dir)"
+      - name: Cache Composer dependencies
+        uses: actions/cache@v1
+        with:
+            path: ${{ steps.composer-cache.outputs.dir }}
+            key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+            restore-keys: ${{ runner.os }}-composer-
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Set Yarn cache directory
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+            path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+            restore-keys: |
+                ${{ runner.os }}-yarn-
+      - name: Install Yarn dependencies
+        run: yarn install
+      - name: Install Composer dependencies
         run: composer install
       - name: Create Zip
-        run: npm run zip
+        run: yarn run zip
       - uses: actions/upload-artifact@v2
         with:
           path: zion-builder.zip
