--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on: pull_request
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  runPHPCSInspection:
+  testAndLint:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
