--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on: pull_request
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  runPHPCSInspection:
+  testAndLint:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -17,35 +17,48 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Node.js environment
         uses: actions/setup-node@v1.4.2
+        with:
+            node-version: '12'
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+            php-version: '7.4'
       - name: Set Composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-dir)"
       - name: Cache Composer dependencies
         uses: actions/cache@v1
         with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
-      - name: Install NPM dependencies
-        run: npm install
+            path: ${{ steps.composer-cache.outputs.dir }}
+            key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+            restore-keys: ${{ runner.os }}-composer-
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Set Yarn cache directory
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+            path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+            restore-keys: |
+                ${{ runner.os }}-yarn-
+      - name: Install Yarn dependencies
+        run: yarn install
       - name: Check Composer configuration
         run: composer validate --strict
       - name: Install Composer dependencies
         run: composer install
       - name: i18n check
         run: |
-             npm run translate && ! git diff -U0 | grep '^[+-]\(msgid\|msgstr\) '
+             yarn run translate && ! git diff -U0 | grep '^[+-]\(msgid\|msgstr\) '
       - name: Check PHP syntax
         run: find zionbuilder.php includes/ -type f -name '*.php' -print0|xargs -0 -L1 -P4 -- php -l
       - name: PHPCS check
         uses: chekalsky/phpcs-action@v1
         with:
-          phpcs_bin_path: './vendor/bin/phpcs'
+            phpcs_bin_path: './vendor/bin/phpcs'
       - name: PHPStan check
         run: vendor/bin/phpstan analyze --level=5
       - name: Lint Vue templates
-        run: npm run-script lint
+        run: yarn run lint
