Update phpstan config  file to remove autoload

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -5,7 +5,7 @@ parameters:
     inferPrivatePropertyTypeFromConstructor: true
     paths:
         - includes/
-    autoload_files:
+    scanFiles:
         - tests/phpstan/bootstrap.php
         - zionbuilder.php
     ignoreErrors:
