--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "phpcompatibility/phpcompatibility-wp": "^2.1.0",
         "squizlabs/php_codesniffer": "^3.5.5",
         "phpstan/phpstan": "^0.12.28",
-        "szepeviktor/phpstan-wordpress": "^0.6.0"
+        "szepeviktor/phpstan-wordpress": "^0.6.0",
+        "bvanhoekelen/performance": "^2.5"
     },
     "license": "GPL-3.0-or-later",
     "authors": [
