--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tiny-invariant": "^1.1.0",
     "tinycolor2": "^1.4.1",
     "vue": "^2.6.10",
+    "vue-date-pick": "^1.4.1",
     "vue-router": "^3.3.2",
     "vuex": "^3.4.0"
   },
