--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         }
     ],
     "require": {
-        "woocommerce/action-scheduler": "^3.1"
+        "woocommerce/action-scheduler": "^3.1",
+        "enshrined/svg-sanitize": "^0.13.3"
     }
 }
