--- a/package.json
+++ b/package.json
@@ -1,63 +1,37 @@
 {
-  "name": "zionbuilder",
-  "author": {
-    "name": "zionbuilder.io",
-    "email": "hello@zionbuilder.io",
-    "url": "https://zionbuilder.io"
-  },
-  "version": "1.0.0",
-  "private": false,
-  "scripts": {
-    "lint": "vue-cli-service lint --no-fix src/",
-    "lint-php": "node ./scripts/lint-php",
-    "serve": "zionbuilder-service serve",
-    "build": "zionbuilder-service build",
-    "zip": "zionbuilder-service zip",
-    "translate": "zionbuilder-service translate"
-  },
-  "dependencies": {
-    "@zionbuilder/importcss": "^1.1.0",
-    "axios": "^0.19.2",
-    "css-box-model": "^1.2.1",
-    "dom-form-serializer": "^1.0.7",
-    "dom-to-image": "^2.6.0",
-    "file-saver": "^2.0.2",
-    "fitvids": "^2.0.0",
-    "localstorage-ttl": "^1.0.2",
-    "lodash-es": "^4.17.15",
-    "memoize-one": "^5.1.1",
-    "popper.js": "^1.16.1",
-    "raf-schd": "^4.0.2",
-    "tiny-invariant": "^1.1.0",
-    "tinycolor2": "^1.4.1",
-    "vue": "^2.6.10",
-    "vue-date-pick": "^1.4.1",
-    "vue-router": "^3.3.2",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@vue/cli-service": "^4.4.1",
-    "@vue/cli-plugin-eslint": "^4.4.1",
-    "@vue/cli-plugin-router": "^4.4.1",
-    "@vue/cli-plugin-typescript": "^4.4.1",
-    "@vue/cli-plugin-vuex": "^4.4.1",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "@zionbuilder/zionbuilder-service": "^1.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-compat": "^3.7.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "lint-staged": "^9.5.0",
-    "typescript": "~3.5.3"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.php": [
-      "node ./scripts/lint-php",
-      "./vendor/bin/phpcs",
-      "git add"
-    ]
-  }
+	"name": "zionbuilder",
+	"author": {
+		"name": "zionbuilder.io",
+		"email": "hello@zionbuilder.io",
+		"url": "https://zionbuilder.io"
+	},
+	"version": "1.1.0",
+	"private": false,
+	"scripts": {
+		"lint": "vue-cli-service lint --no-fix src/",
+		"lint-php": "node ./scripts/lint-php",
+		"serve": "zionbuilder-cli serve",
+		"build": "zionbuilder-service build",
+		"zip": "zionbuilder-service zip",
+		"translate": "zionbuilder-service translate"
+	},
+	"dependencies": {
+		"axios": "^0.20.0",
+		"css-box-model": "^1.2.1",
+		"fitvids": "^2.1.1",
+		"lodash-es": "^4.17.15",
+		"memoize-one": "^5.1.1",
+		"popper.js": "^1.16.1",
+		"raf-schd": "^4.0.2",
+		"tinycolor2": "^1.4.1",
+		"vue": "^3.0.0",
+		"vue-date-pick": "^1.4.1",
+		"vuex": "^4.0.0-beta.4"
+	},
+	"devDependencies": {
+		"lerna": "^3.22.1",
+		"typescript": "^4.0.3",
+		"@zionbuilder/cli-tsconfig": "^1.0.0",
+		"@zionbuilder/cli": "^1.0.0"
+	}
 }
