added zionbuilder cli to published packages

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
 	"packages": [
-		"src/packages/cli-tsconfig"
+		"src/packages/cli-tsconfig",
+		"src/packages/cli"
 	],
 	"version": "1.0.0",
 	"publishConfig": {
