--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,9 @@
 {
 	"packages": [
-		"src/packages/cli-tsconfig",
-		"src/packages/cli"
+		"src/packages/cli",
+		"src/packages/cli-tsconfig"
 	],
-	"version": "1.0.0",
+	"version": "1.0.1-alpha.0",
 	"publishConfig": {
 		"access": "public"
 	}
