--- a/src/packages/cli-tsconfig/package.json
+++ b/src/packages/cli-tsconfig/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zionbuilder/cli-tsconfig",
-	"version": "1.0.0",
+	"version": "1.0.1-alpha.0",
 	"description": "Base TypeScript config file for Zion Builder core and plugins",
 	"author": "zionbuilder.io",
 	"license": "MIT",
