--- a/src/packages/cli/package.json
+++ b/src/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zionbuilder/cli",
-	"version": "1.0.0",
+	"version": "1.0.1-alpha.0",
 	"description": "> TODO: description",
 	"homepage": "",
 	"main": "index.js",
