--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"axios": "^0.20.0",
 		"css-box-model": "^1.2.1",
+		"file-saver": "^2.0.2",
 		"fitvids": "^2.1.1",
 		"lodash-es": "^4.17.15",
 		"memoize-one": "^5.1.1",
@@ -26,12 +27,13 @@
 		"tinycolor2": "^1.4.1",
 		"vue": "^3.0.0",
 		"vue-date-pick": "^1.4.1",
+		"vue-router": "^4.0.0-beta.11",
 		"vuex": "^4.0.0-beta.4"
 	},
 	"devDependencies": {
+		"@zionbuilder/cli": "^1.0.1-alpha.0",
+		"@zionbuilder/cli-tsconfig": "^1.0.1-alpha.0",
 		"lerna": "^3.22.1",
-		"typescript": "^4.0.3",
-		"@zionbuilder/cli-tsconfig": "^1.0.0",
-		"@zionbuilder/cli": "^1.0.0"
+		"typescript": "^4.0.3"
 	}
 }
