--- a/packages/webpack-config/package.json
+++ b/packages/webpack-config/package.json
@@ -4,6 +4,10 @@
   "license": "MIT",
   "dependencies": {
     "@vue/compiler-sfc": "^3.0.0",
+    "css-loader": "^4.3.0",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.2.1",
     "ts-loader": "^8.0.4",
     "vue-loader": "^16.0.0-beta.8",
     "webpack-merge": "^5.1.4"
