Added ability to use zion builder version of Vue

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,5 +8,9 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack --watch"
+  },
+  "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a",
+  "dependencies": {
+    "@zionbuilder/css-variables": "file:../css-variables"
   }
 }
