--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -9,6 +9,7 @@
 		"dom-to-image": "^2.8.0",
 		"file-saver": "^2.0.2",
 		"localstorage-ttl": "1.0.2",
+		"dom-form-serializer": "^1.0.8",
 		"vue": "^3.0.0",
 		"vue-router": "^4.0.0-beta.11",
 		"vuex": "^4.0.0-beta.4"
