--- a/packages/directive-click-outside/package.json
+++ b/packages/directive-click-outside/package.json
@@ -2,7 +2,7 @@
   "name": "@zionbuilder/click-outside-directive",
   "version": "1.0.0",
   "description": "A Vue directive for detecting clicks made outside selector",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "author": "zionbuilder.io",
   "license": "MIT"
 }
