--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,3 @@
 {
-	"extends": "@zionbuilder/tsconfig/tsconfig.json",
-	"compilerOptions": {
-		"paths": {
-			"@zionbuilder/*": ["./packages/*"],
-			"@/*": ["./packages/*"],
-			// "@zionbuilder/event-bus": ["./packages/event-bus"]
-		}
-	}
+	"extends": "./tsconfig.base.json"
 }
