Updated tooltip tsconfig

--- a/packages/tooltip/tsconfig.json
+++ b/packages/tooltip/tsconfig.json
@@ -3,5 +3,10 @@
 	"compilerOptions": {
 		"rootDir": "./src",
 		"declarationDir": "./build-types"
-	}
+	},
+	"references": [
+		{ "path": "../z-index-manager" },
+		{ "path": "../utils" },
+	],
+	"include": [ "src/**/*" ]
 }
