--- a/packages/tooltip/tsconfig.json
+++ b/packages/tooltip/tsconfig.json
@@ -8,5 +8,8 @@
 		{ "path": "../z-index-manager" },
 		{ "path": "../utils" },
 	],
-	"include": [ "src/**/*" ]
+	"include": [
+		"src/**/*",
+		"../shims-vue.d.ts"
+	]
 }
