--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"lodash-es": "^4.17.15"
 	},
 	"devDependencies": {
+		"@types/lodash-es": "^4.17.3",
 		"lerna": "^3.22.1",
 		"typescript": "^4.0.3",
 		"webpack": "^4.44.2",
