--- a/packages/rest/tsconfig.json
+++ b/packages/rest/tsconfig.json
@@ -1,3 +1,15 @@
 {
-	"extends": "@zionbuilder/tsconfig/tsconfig.json"
+	"extends": "../../tsconfig.base.json",
+	"compilerOptions": {
+		"rootDir": "./src",
+		"declarationDir": "./build-types"
+	},
+	"references": [
+		{ "path": "../z-index-manager" },
+		{ "path": "../utils" },
+	],
+	"include": [
+		"src/**/*",
+		"../shims-vue.d.ts"
+	]
 }
