--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@types/lodash-es": "^4.17.3",
+		"@types/webpack": "^4.41.22",
 		"lerna": "^3.22.1",
 		"typescript": "^4.0.3",
 		"webpack": "^4.44.2",
