--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -2,7 +2,7 @@
 	"name": "@zionbuilder/tooltip",
 	"version": "1.0.0",
 	"description": "A Vue plugin and component for creatign tooltips",
-	"main": "src/index.ts",
+	"main": "src/index",
 	"license": "MIT",
 	"scripts": {
 		"build": "webpack --mode=production",
