--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "@zionbuilder/components",
-  "version": "1.0.1-alpha.1",
-  "description": "Global components for Zion Builder",
-  "main": "index.js",
-  "author": "zionbuilder.io",
-  "license": "MIT",
-  "scripts": {
-    "build": "webpack",
-    "dev": "webpack --watch"
-  },
-  "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a",
-  "dependencies": {
-    "@zionbuilder/css-variables":  "^1.0.0",
-	"@zionbuilder/video":  "^1.0.0",
-	"@zionbuilder/sortable": "^1.0.0",
-    "popper.js": "^1.16.1",
-    "raf-schd": "^4.0.2",
-    "tinycolor2": "^1.4.1",
-    "vue-date-pick": "^1.4.1"
-  }
+	"name": "@zionbuilder/components",
+	"version": "1.0.1-alpha.1",
+	"description": "Global components for Zion Builder",
+	"main": "./src/index",
+	"author": "zionbuilder.io",
+	"license": "MIT",
+	"scripts": {
+		"build": "webpack",
+		"dev": "webpack --watch"
+	},
+	"gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a",
+	"dependencies": {
+		"@zionbuilder/css-variables": "^1.0.0",
+		"@zionbuilder/video": "^1.0.0",
+		"@zionbuilder/sortable": "^1.0.0",
+		"popper.js": "^1.16.1",
+		"raf-schd": "^4.0.2",
+		"tinycolor2": "^1.4.1",
+		"vue-date-pick": "^1.4.1",
+		"@zionbuilder/tooltip": "^1.0.0"
+	}
 }
