--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -4,12 +4,9 @@
 		"rootDir": "./src",
 		"declarationDir": "./build-types"
 	},
-	"references": [
-		{ "path": "../z-index-manager" },
-		{ "path": "../utils" },
-	],
 	"include": [
 		"src/**/*",
-		"../shims-vue.d.ts"
+		"../shims-vue.d.ts",
+		"../global.d.ts"
 	]
 }
