--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -8,7 +8,8 @@
 	"dependencies": {
 		"vue": "^3.0.0",
 		"vue-router": "^4.0.0-beta.11",
-		"vuex": "^4.0.0-beta.4"
+		"vuex": "^4.0.0-beta.4",
+		"@zionbuilder/components": "^1.0.0"
 	},
 	"private": false
 }
