--- a/packages/preview/tsconfig.json
+++ b/packages/preview/tsconfig.json
@@ -5,8 +5,7 @@
 		"declarationDir": "./build-types"
 	},
 	"references": [
-		{ "path": "../z-index-manager" },
-		{ "path": "../utils" },
+		{ "path": "../components" }
 	],
 	"include": [
 		"src/**/*",
