--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"publish:packages": "lerna run build && lerna publish",
 		"publish": "yarn run publish:packages",
 		"dev:packages": "lerna run dev",
-		"dev": "webpack --watch",
+		"dev": "webpack --watch --mode=development",
 		"build": "webpack",
 		"build:packages": "lerna run build",
 		"build:types": "tsc --build"
