--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -12,12 +12,13 @@
 	"gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a",
 	"dependencies": {
 		"@zionbuilder/css-variables": "^1.0.0",
+		"@zionbuilder/tooltip": "^1.0.0",
+		"@zionbuilder/modal": "^1.0.0",
 		"@zionbuilder/video": "^1.0.0",
 		"@zionbuilder/sortable": "^1.0.0",
 		"popper.js": "^1.16.1",
 		"raf-schd": "^4.0.2",
 		"tinycolor2": "^1.4.1",
-		"vue-date-pick": "^1.4.1",
-		"@zionbuilder/tooltip": "^1.0.0"
+		"vue-date-pick": "^1.4.1"
 	}
 }
