--- a/packages/modal/tsconfig.json
+++ b/packages/modal/tsconfig.json
@@ -5,9 +5,8 @@
 		"declarationDir": "./build-types"
 	},
 	"references": [
-		{ "path": "../tooltip" },
+		{ "path": "../z-index-manager" },
 		{ "path": "../utils" },
-		{ "path": "../modal" },
 	],
 	"include": [
 		"src/**/*",
