Added gutenberg and edit page scripts

--- a/packages/edit-page/tsconfig.json
+++ b/packages/edit-page/tsconfig.json
@@ -5,6 +5,9 @@
 		"declarationDir": "./build-types"
 	},
 	"references": [
+		{ "path": "../tooltip" },
+		{ "path": "../utils" },
+		{ "path": "../modal" },
 	],
 	"include": [
 		"src/**/*",
