Fixed several errors

--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -9,7 +9,8 @@
 		"vue": "^3.0.0",
 		"vue-router": "^4.0.0-beta.11",
 		"vuex": "^4.0.0-beta.4",
-		"@zionbuilder/components": "^1.0.0"
+		"@zionbuilder/components": "^1.0.0",
+		"@zionbuilder/importcss": "^1.1.0"
 	},
 	"private": false
 }
