--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -11,7 +11,8 @@
 	},
 	"types": "./build-types",
 	"dependencies": {
-		"@zionbuilder/z-index-manager": "^1.0.0",
-		"@zionbuilder/utils": "^1.0.0"
+		"@popperjs/core": "^2.5.3",
+		"@zionbuilder/utils": "^1.0.0",
+		"@zionbuilder/z-index-manager": "^1.0.0"
 	}
 }
