--- a/packages/webpack-config/package.json
+++ b/packages/webpack-config/package.json
@@ -4,15 +4,18 @@
   "license": "MIT",
   "dependencies": {
     "@vue/compiler-sfc": "^3.0.0",
+    "@zionbuilder/css-variables": "file:../css-variables",
     "css-loader": "^4.3.0",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.4",
     "vue-loader": "^16.0.0-beta.8",
-	"webpack-merge": "^5.1.4",
-    "@zionbuilder/css-variables": "file:../css-variables"
+    "webpack-merge": "^5.1.4"
   },
   "main": "src/index.js",
-  "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a"
+  "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a",
+  "devDependencies": {
+    "mini-css-extract-plugin": "^0.11.3"
+  }
 }
