--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -10,7 +10,8 @@
 		"vue-router": "^4.0.0-beta.11",
 		"vuex": "^4.0.0-beta.4",
 		"@zionbuilder/components": "^1.0.0",
-		"@zionbuilder/importcss": "^1.1.0"
+		"@zionbuilder/importcss": "^1.1.0",
+		"@zionbuilder/click-outside-directive": "^1.0.0"
 	},
 	"private": false
 }
