Updated store functionality

--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -4,6 +4,9 @@
 		"rootDir": "./src",
 		"declarationDir": "./build-types"
 	},
+	// "paths":{
+	// 	"data": ["./src/data"]
+	// },
 	"references": [
 		{
 			"path": "../z-index-manager"
