Improved Vue 3 compatibility

--- a/packages/sortable/package.json
+++ b/packages/sortable/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "css-box-model": "^1.2.1",
-    "memoize-one": "^5.1.1"
+	"memoize-one": "^5.1.1",
+	"raf-schd": "^4.0.2"
   }
 }
