--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "editor",
+	"name": "@zionbuilder/editor",
 	"version": "1.0.0",
 	"description": "Creates the editor page for Zion Builder",
 	"main": "./src/index",
