--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zionbuilder/components",
-	"version": "1.0.1-alpha.1",
+	"version": "1.0.2-alpha.0",
 	"description": "Global components for Zion Builder",
 	"main": "./src/index",
 	"author": "zionbuilder.io",
@@ -12,10 +12,10 @@
 	"gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a",
 	"dependencies": {
 		"@zionbuilder/css-variables": "^1.0.0",
-		"@zionbuilder/tooltip": "^1.0.0",
-		"@zionbuilder/modal": "^1.0.0",
-		"@zionbuilder/video": "^1.0.0",
-		"@zionbuilder/sortable": "^1.0.0",
+		"@zionbuilder/modal": "^1.0.2-alpha.0",
+		"@zionbuilder/sortable": "^1.0.2-alpha.0",
+		"@zionbuilder/tooltip": "^1.0.2-alpha.0",
+		"@zionbuilder/video": "^1.0.2-alpha.0",
 		"raf-schd": "^4.0.2",
 		"tinycolor2": "^1.4.1",
 		"vue-date-pick": "^1.4.1"
