--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,20 +1,20 @@
 {
 	"name": "@zionbuilder/editor",
-	"version": "1.0.0",
+	"version": "1.0.2-alpha.0",
 	"description": "Creates the editor page for Zion Builder",
 	"main": "./src/index",
 	"author": "zionbuilder.io",
 	"license": "MIT",
 	"dependencies": {
+		"@zionbuilder/click-outside-directive": "^1.0.2-alpha.0",
+		"@zionbuilder/models": "^1.0.2-alpha.0",
+		"dom-form-serializer": "^1.0.8",
 		"dom-to-image": "^2.6.0",
 		"file-saver": "^2.0.2",
 		"localstorage-ttl": "1.0.2",
-		"dom-form-serializer": "^1.0.8",
 		"vue": "^3.0.0",
 		"vue-router": "^4.0.0-beta.11",
-		"vuex": "^4.0.0-beta.4",
-		"@zionbuilder/click-outside-directive": "^1.0.0",
-		"@zionbuilder/models": "^1.0.0"
+		"vuex": "^4.0.0-beta.4"
 	},
 	"private": false
 }
