--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/forms",
-  "version": "1.0.0",
+  "version": "1.0.2-alpha.0",
   "main": "./src/index",
   "author": "zionbuilder.io",
   "license": "MIT"
