--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,11 +11,11 @@
 	},
 	"gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a",
 	"dependencies": {
-		"@zionbuilder/css-variables": "^1.0.1-alpha.1",
-		"@zionbuilder/modal": "^1.0.2-alpha.0",
-		"@zionbuilder/sortable": "^1.0.2-alpha.0",
-		"@zionbuilder/tooltip": "^1.0.2-alpha.0",
-		"@zionbuilder/video": "^1.0.2-alpha.0",
+		"@zionbuilder/css-variables": "file:../css-variables",
+		"@zionbuilder/modal": "file:../modal",
+		"@zionbuilder/sortable": "file:../sortable",
+		"@zionbuilder/tooltip": "file:../tooltip",
+		"@zionbuilder/video": "file:../video",
 		"raf-schd": "^4.0.2",
 		"tinycolor2": "^1.4.1",
 		"vue-date-pick": "^1.4.1"
