--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -6,8 +6,8 @@
 	"author": "zionbuilder.io",
 	"license": "MIT",
 	"dependencies": {
-		"@zionbuilder/click-outside-directive": "^1.0.2-alpha.0",
-		"@zionbuilder/models": "^1.0.2-alpha.0",
+		"@zionbuilder/click-outside-directive": "file:../click-outside-directive",
+		"@zionbuilder/models": "file:../models",
 		"dom-form-serializer": "^1.0.8",
 		"dom-to-image": "^2.6.0",
 		"file-saver": "^2.0.2",
